[gd_scene load_steps=6 format=3 uid="uid://b4h7wskyd1qpj"]

[ext_resource type="Theme" uid="uid://ben2451hr7117" path="res://assets/theme.tres" id="1_cngr4"]
[ext_resource type="Script" path="res://src/Menu/settings.gd" id="2_1qla6"]
[ext_resource type="Texture2D" uid="uid://djcul2kvl56fv" path="res://assets/menu_screen_1.png" id="2_4ylr3"]
[ext_resource type="PackedScene" uid="uid://cott2t5ahccvc" path="res://src/Menu/MenuButton.tscn" id="4_2lcpq"]
[ext_resource type="Script" path="res://src/Nodes/ValueSlider.gd" id="4_oh5nr"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cngr4")
script = ExtResource("2_1qla6")
metadata/_edit_vertical_guides_ = [1856.0]

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_4ylr3")

[node name="Languages" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 791.0
offset_right = 1181.0
offset_bottom = 931.0

[node name="Label" type="Label" parent="Languages"]
layout_mode = 2
text = "Language"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -683.0
offset_right = -63.0
offset_bottom = -113.0
grow_horizontal = 0
grow_vertical = 2

[node name="MasterVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="MasterVolume" type="TextureProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
focus_mode = 2
theme_type_variation = &"ValueSlider"
value = 100.0
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
script = ExtResource("4_oh5nr")
show_arrows = false

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicVolume" type="TextureProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
focus_mode = 2
theme_type_variation = &"ValueSlider"
value = 100.0
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
script = ExtResource("4_oh5nr")
show_arrows = false

[node name="SoundsVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="SoundsVolume" type="TextureProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
focus_mode = 2
theme_type_variation = &"ValueSlider"
value = 100.0
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
script = ExtResource("4_oh5nr")
show_arrows = false

[node name="NarrationVolumeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="NarrationVolume" type="TextureProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
focus_mode = 2
theme_type_variation = &"ValueSlider"
value = 100.0
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
script = ExtResource("4_oh5nr")
show_arrows = false

[node name="AmbientSubs" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Show ambient subtitles"

[node name="MicrophoneInput" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Play with voice"

[node name="MicThresholdLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="MicThreshold" type="TextureProgressBar" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
focus_mode = 2
theme_type_variation = &"ValueSlider"
min_value = 10.0
max_value = 90.0
value = 20.0
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
script = ExtResource("4_oh5nr")
show_arrows = false

[node name="Return" parent="." instance=ExtResource("4_2lcpq")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -491.0
offset_top = -151.0
offset_right = -64.0
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 0
actual_text = "Return to menu"
text_size = 90

[connection signal="value_changed" from="VBoxContainer/MasterVolume" to="." method="_on_volume_slider_value_changed" binds= [&"Master"]]
[connection signal="value_changed" from="VBoxContainer/MusicVolume" to="." method="_on_volume_slider_value_changed" binds= [&"Music"]]
[connection signal="value_changed" from="VBoxContainer/SoundsVolume" to="." method="_on_volume_slider_value_changed" binds= [&"Sounds"]]
[connection signal="value_changed" from="VBoxContainer/NarrationVolume" to="." method="_on_volume_slider_value_changed" binds= [&"Narration"]]
[connection signal="toggled" from="VBoxContainer/AmbientSubs" to="." method="_on_ambient_subs_toggled"]
[connection signal="toggled" from="VBoxContainer/MicrophoneInput" to="." method="_on_microphone_input_toggled"]
[connection signal="value_changed" from="VBoxContainer/MicThreshold" to="." method="_on_mic_threshold_value_changed"]
[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
